# logstorm

./: .gitignore  Cargo.toml  README.md  config.yaml  example_config.yaml
src/: buffer.rs  config.rs  embedding.rs  emitter.rs  lib.rs  log_entry.rs  main.rs  sink.rs
src/sink/: dashboard.rs  elasticsearch.rs  mod.rs  opensearch.rs  pgvector.rs  qdrant.rs
