[package]
name = "emitter"
version = "0.1.0"
edition = "2024"
description = "A log emitter that generates synthetic log messages and writes them to a vector database for benchmarking purposes."
license = "MIT"
authors = ["Nathan LeRoy <nleroy917@gmail.com>"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# sdks for sinks (optional, enable via features)
qdrant-client = { package = "qdrant-client", version = "1.16", optional = true }
elasticsearch = { version = "9.1.0-alpha.1", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }
clap = { version = "4", features = ["derive"] }
async-openai = { version = "0.32.4", features = ["embedding"] }
axum = { version = "0.8", features = ["ws"], optional = true }
futures = { version = "0.3", optional = true }
indicatif = "0.17"


[features]
default = []
qdrant = ["dep:qdrant-client"]
elasticsearch = ["dep:elasticsearch"]
dashboard = ["dep:axum", "dep:futures"]
pgvector = ["dep:sqlx", "dep:pgvector"]
